--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+h1 {
+  color:black;
+}
+
+h2 {
+  color: gray;
+  font-style: italic;
+}
+
 p {
-  color: red;
+  color: black;
+}
+
+img#lens {
+  width: 200px;
 }
