--- a/style.css
+++ b/style.css
@@ -2,16 +2,63 @@ body {
   font-family: arial, verdana, helvetica, sans-serif;
 }
 
+article {
+  padding: 15px 15px 10px 15px;
+  margin-top: 40px;
+}
+
+h1, h2 {
+  margin-top: -50px;
+  padding-top: 50px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+
 img#lens {
-  width: 200px;
+  max-width: 30%;
 }
 
 img#irises {
   max-width: 80%;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 table, th, td {
-  border: 1px solid;
+  border: 2px solid;
   border-collapse: collapse;
 }
 
