--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ h1, h2 {
   padding-top: 50px;
 }
 
+.subheader {
+  font-size: 20px;
+  color: #888;
+  font-style: italic;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
