--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1, h2, h3 {
   margin-bottom: 0;
   padding: 1.25rem 0 0.5rem 0;
 }
+
 h1 {
   font-size: 3rem;
 }
@@ -34,6 +35,12 @@ h3 {
 
 .top-link::after {
   content: " \2191";
+}
+
+mark {
+  background-color: transparent;
+  font-style: italic;
+  font-weight: bold;
 }
 
 main {
